# telegram-copilot

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  UI_REQUIREMENTS.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: test.yml
backend/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/routers/: briefing.py  draft.py  summary.py
backend/app/schemas/: __init__.py  briefing.py
backend/app/services/: ai.py  cache.py
backend/tests/: conftest.py  test_briefing.py
e2e/: app-smoke.spec.ts  auth-flow.spec.ts  briefing.spec.ts  chats.spec.ts  contacts.spec.ts  fixtures.ts
features/: BRIEFING_SPECIFICATION.md  CONTACTS_SPECIFICATION.md  OUTREACH_SPECIFICATION.md  SUMMARY_SPECIFICATION.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cache.rs  error.rs  lib.rs  main.rs
src-tauri/src/ai/: client.rs  mod.rs  prompts.rs  sanitize.rs  types.rs
src-tauri/src/commands/: ai.rs  auth.rs  chats.rs  contacts.rs  mod.rs  offboard.rs  outreach.rs  scopes.rs
src-tauri/src/db/: contacts.rs  mod.rs  outreach.rs  schema.rs  scopes.rs  settings.rs
src-tauri/src/telegram/: auth.rs  client.rs  contacts.rs  messages.rs  mod.rs
src-tauri/src/utils/: rate_limiter.rs
src/components/auth/: CodeVerification.tsx  LoginForm.tsx  PasswordInput.tsx  PhoneInput.tsx
src/components/briefing/: BriefingCard.tsx  BriefingView.tsx  CategoryGroup.tsx  FYIItem.tsx  ResponseCard.tsx  SmartBriefing.tsx  StatsBar.tsx
src/components/chat/: ChatPanel.tsx
src/components/chats/: ChatItem.tsx  ChatList.tsx  ChatPanel.tsx  MessageList.tsx
src/components/common/: AIProviderForm.tsx  ErrorBoundary.tsx  LoadingSkeletons.tsx  Modal.tsx  (+2 more)
src/hooks/: useChats.ts  useContacts.ts  useTelegram.ts
src/lib/: tauri.ts
src/stores/: authStore.ts  briefingStore.ts  chatStore.ts  contactStore.ts  outreachStore.ts  scopeStore.ts  settingsStore.ts  summaryStore.ts  themeStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: contacts.ts  scope.ts  telegram.ts
(+43 files in other folders)
