[package]
name = "telegram-copilot-desktop"
version = "0.1.0"
description = "A Telegram Desktop Client with AI Features"
authors = ["you"]
edition = "2021"

[lib]
name = "telegram_copilot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

# TDLib bindings - using tdlib crate
# Note: This requires TDLib to be installed on the system
# See: https://github.com/tdlib/td#building
tdlib = { version = "0.4", optional = true }

[features]
default = []
tdlib-integration = ["tdlib"]
